  }
}
\section{Changes in version 1.9.4}{
  \itemize{
    \item Bug fix in getChromosome method for SnpAnnotationDataFrame
    (proper behavior of unnamed "index" argument).
  }
}
\section{Changes in version 1.9.5}{
  \itemize{
    \item Remove defunct functions.
    \item Improve efficiency of gwasExactHW, mendelErr,
    assocTestRegression (reduce number of calls to rbind).
  }
}
\section{Changes in version 1.9.6}{
  \itemize{
    \item Revised anomFilterBAF - fewer centromere spanning anomalies
    that aren't real, corrects some merging issues (previously it would
    merge sections that really were different split widths).
    Users should be aware that this will increase running time.
  }
}
\section{Changes in version 1.9.7}{
  \itemize{
    \item Added gdsSubset and gdsSubsetCheck functions to make a subset GDS file that includes only specified SNPs and scans from an existing GDS file
    \item Updated gdsImputedDosage and gdsCheckImputedDosage to account for IMPUTE2 gprobs files that have missing values (specified by three equal probability strings)
    \item Updated gdsCheckImputedDosage to produce optional logfile reporting any missing genotypes
  }
}
\section{Changes in version 1.9.8}{
  \itemize{
    \item updates/bug fixes to gdsSubset/gdsSubsetCheck - different missing value attributes may be set if sub.storage type is different.
  }
}
\section{Changes in version 1.9.9}{
  \itemize{
    \item added block size support for GDS files stored with scan,snp dimensions
    \item gdsSubset and gdsSubsetCheck now operate on the fastest dimension of the GDS file
  }
}
\section{Changes in version 1.11.1}{
  \itemize{
    \item Added ylim argument to qqPlot.
  }
}
\section{Changes in version 1.11.3}{
  \itemize{
    \item updated gdsSubset for new gdsfmt read.gdsn syntax (also changed in release version)
  }
}
\section{Changes in version 1.11.4}{
  \itemize{
    \item added optional thinThreshold argument to manhattanPlot and qqPlot functions
  }
}




